# msentry

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-MSentry.md  README.md  msentry.cpp  msentry.doxyfile  msentry.h  msentry.pri  raven.cpp  raven.h  ravendefs.cpp  ravendefs.h
example-sentry-basic/: CMakeLists.txt  example-sentry-basic.pro  main.cpp  mlog-example-basic.pro
example-sentry-full/: CMakeLists.txt  example-sentry-full.pro  main.cpp  mlog-example-full.pro
tst_msentry/: CMakeLists.txt  tst_msentry.cpp  tst_msentry.pro
